--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <div class="container">
-    <div class="title">MySQL DDL 转换成 Laravel Model</div>
+    <div class="title">Convert MySQL DDL to Laravel Model</div>
 </div>
 <div class="container">
     <div class="side side-left">
         <div class="header">
-            <div class="btn btn-notice">源代码：</div>
-            <div id="run" class="btn btn-run">点击运行》</div>
+            <div class="btn btn-notice">DDL Code：</div>
+            <div id="run" class="btn btn-run"> Convert 》 </div>
         </div>
         <div class="content">
             <textarea id="coding" class="coding" name="" cols="30" rows="10"></textarea>
@@ -22,13 +22,13 @@
     </div>
     <div class="side side-right">
         <div class="header">
-            <div class="btn btn-notice">运行结果：</div>
-            <div id="copy" class="btn btn-run btn-copy" data-clipboard-target="#result">一键复制》</div>
+            <div class="btn btn-notice">Result：</div>
+            <div id="copy" class="btn btn-run btn-copy" data-clipboard-target="#result"> Copy 》 </div>
         </div>
         <div class="content">
             <pre><code id="result" class="coding language-php" name="" cols="30" rows="10"></code></pre>
         </div>
-        <div id="toast">复制成功</div>
+        <div id="toast">Copy Success</div>
     </div>
 </div>
 <link rel="stylesheet" type="text/css" href="index.css"/>
